Modif File Index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <hr>
         <ul>
             <li>Moona</li>
-            <li>Iofi</li>
+            <li>Risu</li>
+            <li>Ollie</li>
         </ul>
     </body>
 
